--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=your_mongodb_connection_string
+FRONTEND_URL=http://localhost:3000
 
 # Client environment variables
 # VITE_API_BASE_URL=http://localhost:5000/api 
