--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,16 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-client/.env
-client/.env.local
-client/.env.development.local
-client/.env.test.local
-client/.env.production.local
 server/.env
 server/.env.local
 server/.env.development.local
 server/.env.test.local
 server/.env.production.local
+client/.env
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
 
 # Build outputs
 /client/dist
@@ -63,6 +63,9 @@ Thumbs.db
 /tmp
 /temp
 /uploads
+server/tmp
+server/temp
+server/uploads
 
 # Cache files
 .cache/
